added unicode integral symbol

--- a/trapezoidal-rule/trapezoidal-rule.ipynb
+++ b/trapezoidal-rule/trapezoidal-rule.ipynb
@@ -77,6 +77,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can also make use of one of the julia's nice features, allowing us to use unicode symbols for variable & method names. So, for example we may write the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.51851851851852"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "∫(f) = trap(f, 0, 4, 10)\n",
+    "g(x) = x^2\n",
+    "∫(g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Eliptic integral \n",
     "Now, we try to use our trap function to get an approximate value of this eliptic integral\n",
     "$$ L = 4 a \\int_0^{\\pi / 2} \\sqrt{1- \\epsilon^2 sin^2(t)}dt$$ \n",
@@ -87,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +143,7 @@
        "3.6"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
