--- a/julia-type-hierarchy/julia-type-hierarchy.ipynb
+++ b/julia-type-hierarchy/julia-type-hierarchy.ipynb
@@ -472,6 +472,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataType"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "typeof(Number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number\n",
+      "┣ Complex\n",
+      "┗ Real\n",
+      "  ┣ AbstractFloat\n",
+      "  ┃ ┣ BigFloat\n",
+      "  ┃ ┣ Float16\n",
+      "  ┃ ┣ Float32\n",
+      "  ┃ ┗ Float64\n",
+      "  ┣ AbstractIrrational\n",
+      "  ┃ ┗ Irrational\n",
+      "  ┣ Integer\n",
+      "  ┃ ┣ Bool\n",
+      "  ┃ ┣ Signed\n",
+      "  ┃ ┃ ┣ BigInt\n",
+      "  ┃ ┃ ┣ Int128\n",
+      "  ┃ ┃ ┣ Int16\n",
+      "  ┃ ┃ ┣ Int32\n",
+      "  ┃ ┃ ┣ Int64\n",
+      "  ┃ ┃ ┗ Int8\n",
+      "  ┃ ┗ Unsigned\n",
+      "  ┃   ┣ UInt128\n",
+      "  ┃   ┣ UInt16\n",
+      "  ┃   ┣ UInt32\n",
+      "  ┃   ┣ UInt64\n",
+      "  ┃   ┗ UInt8\n",
+      "  ┗ Rational\n"
+     ]
+    }
+   ],
+   "source": [
+    "printsub(Number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any -> Number\n"
+     ]
+    }
+   ],
+   "source": [
+    "printsuper(Number)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
