added inverse wrt + and small tests

--- a/polynomials-and-julia/polynomials-and-julia.ipynb
+++ b/polynomials-and-julia/polynomials-and-julia.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Polynomials and Julia"
    ]
@@ -126,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "Poly{Int64}([1])"
+       "Poly{Int64}([0, 1])"
       ]
      },
      "execution_count": 4,
@@ -137,7 +141,7 @@
    "source": [
     "# call outer constructor\n",
     "q = Poly(2,4,3)\n",
-    "r = Poly(1)"
+    "r = Poly(0,1)"
    ]
   },
   {
@@ -373,7 +377,7 @@
    "execution_count": 13,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -401,14 +405,14 @@
    "execution_count": 14,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "+ (generic function with 167 methods)"
+       "- (generic function with 176 methods)"
       ]
      },
      "execution_count": 14,
@@ -418,10 +422,19 @@
    ],
    "source": [
     "import Base.+\n",
-    "\n",
     "function +(p::Poly{T}, q::Poly{T}) where T\n",
     "    # Arr. comprehension - create math. like arrays, we use the inner constructor and range 1:X (iterable)\n",
     "    Poly([p[i] + q[i] for i in 1:max(length(p), length(q))])\n",
+    "end\n",
+    "\n",
+    "import Base.-\n",
+    "# define inverse elements\n",
+    "function -(p::Poly{T}) where T\n",
+    "    Poly(- p.coeff)\n",
+    "end\n",
+    "\n",
+    "function -(p::Poly{T}, q::Poly{T}) where T\n",
+    "    p + (-q)\n",
     "end"
    ]
   },
@@ -437,7 +450,7 @@
     {
      "data": {
       "text/plain": [
-       "zero (generic function with 17 methods)"
+       "one (generic function with 18 methods)"
       ]
      },
      "execution_count": 15,
@@ -446,12 +459,13 @@
     }
    ],
    "source": [
-    "# overload the zero function for polynomials\n",
-    "import Base.zero\n",
+    "# overload the zero and one function for polynomials\n",
+    "import Base.zero, Base.one\n",
     "# additive identity element for the type of x, zero(x)\n",
     "# define function with f(x) = ...\n",
     "# var name left out, important is to know T, dispatch on type\n",
-    "zero(::Type{Poly{T}}) where T = Poly(Vector{T}())"
+    "zero(::Type{Poly{T}}) where T = Poly(Vector{T}())\n",
+    "one(::Type{Poly{T}}) where T = Poly([one(T)])"
    ]
   },
   {
@@ -466,7 +480,7 @@
     {
      "data": {
       "text/plain": [
-       "Poly{Float64}(Float64[])"
+       "(Poly{Float64}(Float64[]), Poly{Float64}([1.0]), Poly{Int64}([1]))"
       ]
      },
      "execution_count": 16,
@@ -475,7 +489,7 @@
     }
    ],
    "source": [
-    "zero(Poly{Float64})"
+    "zero(Poly{Float64}), one(Poly{Float64}), one(Poly{Int64})"
    ]
   },
   {
@@ -528,19 +542,28 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Poly{Int64}([3, 9, 11, 6])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(p + q) + r == p + (q + r) = true\n",
+      "zero(Poly{Int64}) + p == p = true\n",
+      "-p + p == zero(Poly{Int64}) = true\n",
+      "p + q == q + p = true\n"
+     ]
     }
    ],
    "source": [
-    "# Yay a polynomial ring over \"Z\" (well not quite Z but ok..)\n",
-    "p * q + r * s + zero(typeof(s))"
+    "# a small test of our implementation\n",
+    "\n",
+    "# properties of a commutative group\n",
+    "# associative +\n",
+    "@show (p + q) + r == p + (q + r)\n",
+    "# defining property of the identity element wrt +\n",
+    "@show zero(Poly{Int64}) + p == p\n",
+    "# defining property of an inverse element wrt +\n",
+    "@show (-p) + p == zero(Poly{Int64})\n",
+    "# commutative +\n",
+    "@show p + q == q + p;"
    ]
   },
   {
@@ -553,12 +576,75 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(p * q) * r == p * (q * r) = true\n",
+      "one(Poly{Int64}) * p == p * one(Poly{Int64}) == p = true\n",
+      "p * (q + r) == p * q + p * r = true\n",
+      "p * q == q * p = true\n",
+      "zero(Poly{Int64}) * p == zero(Poly{Int64}) = true\n",
+      "-p * q == p * -q == -(p * q) = true\n"
+     ]
+    }
+   ],
+   "source": [
+    "# further properties of a commutative ring\n",
+    "# associative * \n",
+    "@show (p*q)*r == p*(q*r)\n",
+    "# defining property of the neutral element wrt *\n",
+    "@show one(Poly{Int64}) * p == p * one(Poly{Int64}) == p\n",
+    "# distributive property\n",
+    "@show p*(q + r) == p * q + p * r\n",
+    "# commutative * \n",
+    "@show p * q == q * p\n",
+    "\n",
+    "# logical consequences\n",
+    "@show zero(Poly{Int64}) * p == zero(Poly{Int64})\n",
+    "@show (-p) * q == p * (-q) == -(p*q);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Poly{Int64}([1, 7, 4, -36, -75, -60, -18])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Yay a polynomial ring over \"Z\" (well not quite Z but ok..)\n",
+    "(p * q + r * s ) * (p - q * r) + zero(typeof(s)) - p * one(typeof(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "show (generic function with 234 methods)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -607,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -620,7 +706,7 @@
        "(2) + (4)x^1 + (3)x^2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -656,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -677,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -690,7 +776,7 @@
        "(1, 6, 2.75, 141.04947947833202, 141.04947947833202)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -718,19 +804,19 @@
       "MethodError: no method matching *(::Poly{Int64}, ::Poly{Float64})\nClosest candidates are:\n  *(::Any, ::Any, !Matched::Any, !Matched::Any...) at operators.jl:529\n  *(::Poly{T}, !Matched::Poly{T}) where T at In[17]:5",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[25]:1"
+      " [1] top-level scope at In[27]:1"
      ]
     }
    ],
    "source": [
     "# multiple dispatch checks the function definition (signature),\n",
-    "# we could provide \"promotion rules\" to convert to a common type\n",
+    "# we could provide \"promotion rules\" to convert to common type\n",
     "Poly(1,2) * Poly(1.1,1.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -744,7 +830,7 @@
        " 6  17  34  57"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,57 +840,6 @@
     "# a callable polynomial u\n",
     "# transpose with a sigle quote\n",
     "u.([1,2,3,4])'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "doubleCoeff (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# defined only for T subtype Number\n",
-    "function doubleCoeff(p::Poly{T}) where T <: Number\n",
-    "    Poly( 2 * p.coeff)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2) + (4)x^1 + (6)x^2"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "doubleCoeff(Poly(1,2,3))"
    ]
   },
   {
@@ -819,10 +854,61 @@
     {
      "data": {
       "text/plain": [
-       "* (generic function with 359 methods)"
+       "doubleCoeff (generic function with 1 method)"
       ]
      },
      "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# defined only for T subtype Number\n",
+    "function doubleCoeff(p::Poly{T}) where T <: Number\n",
+    "    Poly( 2 * p.coeff)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2) + (4)x^1 + (6)x^2"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doubleCoeff(Poly(1,2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "* (generic function with 359 methods)"
+      ]
+     },
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -855,10 +941,10 @@
     {
      "data": {
       "text/plain": [
-       "((3) + (8)x^1 + (7)x^2) + ((4) + (12)x^1 + (15)x^2 + (6)x^3)x^1 + ((4) + (12)x^1 + (11)x^2 + (6)x^3)x^2 + ((4) + (9)x^1 + (5)x^2)x^3 + ((2) + (3)x^1 + (2)x^2)x^4 + ((1) + (1)x^1)x^5"
+       "((3) + (6)x^1 + (7)x^2) + ((2) + (11)x^1 + (15)x^2 + (6)x^3)x^1 + ((2) + (9)x^1 + (15)x^2 + (6)x^3)x^2 + ((1) + (6)x^1 + (8)x^2 + (3)x^3)x^3 + ((1) + (3)x^1 + (3)x^2)x^4 + ((0) + (1)x^1 + (1)x^2)x^5"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,12 +955,12 @@
     "τ = Poly(p,q,r,s)\n",
     "μ = Poly(p, p, r)\n",
     "ν = Poly(q,r)\n",
-    "ρ = τ * μ + ν"
+    "ρ = τ * μ + ν - μ + one(typeof(ν))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -885,9 +971,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "μ = ((1) + (2)x^1) + ((1) + (2)x^1)x^1 + ((1))x^2\n",
+      "μ = ((1) + (2)x^1) + ((1) + (2)x^1)x^1 + ((0) + (1)x^1)x^2\n",
       "μ == Poly(1) * μ = true\n",
-      "Poly(0, 1) * μ = ((0) + (1)x^1 + (2)x^2) + ((0) + (1)x^1 + (2)x^2)x^1 + ((0) + (1)x^1)x^2\n"
+      "Poly(0, 1) * μ = ((0) + (1)x^1 + (2)x^2) + ((0) + (1)x^1 + (2)x^2)x^1 + ((0) + (0)x^1 + (1)x^2)x^2\n"
      ]
     }
    ],
@@ -901,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -913,7 +999,7 @@
      "output_type": "stream",
      "text": [
       "p = (1) + (2)x^1\n",
-      "p * μ = ((1) + (4)x^1 + (4)x^2) + ((1) + (4)x^1 + (4)x^2)x^1 + ((1) + (2)x^1)x^2\n"
+      "p * μ = ((1) + (4)x^1 + (4)x^2) + ((1) + (4)x^1 + (4)x^2)x^1 + ((0) + (1)x^1 + (2)x^2)x^2\n"
      ]
     }
    ],
@@ -924,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -937,7 +1023,7 @@
        "zero (generic function with 18 methods)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -978,9 +1064,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "μ = ((1) + (2)x^1) + ((1) + (2)x^1)x^1 + ((1))x^2\n",
+      "μ = ((1) + (2)x^1) + ((1) + (2)x^1)x^1 + ((0) + (1)x^1)x^2\n",
       "q = (2) + (4)x^1 + (3)x^2\n",
-      "μ(q) = (7) + (26)x^1 + (39)x^2 + (30)x^3 + (9)x^4\n",
+      "μ(q) = (3) + (14)x^1 + (27)x^2 + (34)x^3 + (24)x^4 + (9)x^5\n",
       "μ(q) == μ[1] + μ[2] * q + μ[3] * q ^ 2 = true\n"
      ]
     }
