--- a/plot-a-function/plot-a-function.ipynb
+++ b/plot-a-function/plot-a-function.ipynb
@@ -13,10 +13,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "using Plots\n",
     "# there are various backends,\n",
     "# for interactive plots in notebooks use Plotly\n",
     "# (cannot export Plotly plots to html...)\n",
-    "using Plots\n",
+    "\n",
+    "# plotly()\n",
+    "# Plots.PlotlyBackend()\n",
     "pyplot()\n",
     "Plots.PyPlotBackend();"
    ]
